# dial

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose-dev.yml  docker-compose.yml  index.yaml  local-conf.json  local-docker-conf.json  nohup.out  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  helm-release.yml  release.yml
chart/: README.md  values.yaml
chart/templates/: deployment.yaml  secret-dial-config.yaml  secret-mongodb-uri.yaml
charts/dial/: Chart.yaml  README.md
charts/dial/templates/: _helpers.tpl  deployment.yaml  secret-dial-config.yaml  secret-mongodb-uri.yaml
scripts/: 1d_sinusoidal_growth.py  1d_sinusoidal_growth_client.py  2d_rosenbrock.py  2d_rosenbrock_client.py  README.md  andie_mock.py  automated_client.py  launch_service.py  manual_client.py  mock_rosenbrock_service.py
src/boalaas_dataclass/: __init__.py  boalaas_dataclass.py
src/boalaas_service/: __init__.py  boalaas_service.py  serverside_data.py
src/dial_dataclass/: __init__.py  dial_dataclass.py  dial_dataclass_responses.py  logger.py  pydantic_helpers.py
src/dial_service/: __init__.py  core.py  dial_service.py  dial_service_implementations.py  logger.py  mongo_handler.py  new_dial.py  serverside_data.py  service_specific_dataclasses.py
src/dial_service/backends/: __init__.py  andie_backend.py  andie_backend_general.py  gpax_backend.py  sklearn_backend.py
src/dial_service/utilities/: parametric_models.py  rewards.py  sampling.py  strategies.py
src/neeter-active-learning/: active_learning_client.py  active_learning_service.py
src/neeter_active_learning/: active_learning_client.py  active_learning_service.py  data_class.py  serverside_data.py
tests/: test_service.py
tests/unit/: test_internals.py
