[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neeter_active_learning"
version = "0.1.0"
authors = [
    {name = "David Joy", email = "joydh1@ornl.gov"},
]
description = "NEETER active learning using INTERSECT SDK"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["active learning"]
#license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "intersect_sdk>=0.5.0,<0.6.0",
    "numpy>=1.26.3,<2.0.0",
    "matplotlib>=3.8.2,<4.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "scipy>=1.12.0,<2.0.0",
]